--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -14,33 +14,21 @@
 <body>
 
     <!-- Inicio de la primera página -->
-    <div data-role="page" data-theme="b">
+    <div data-role="page" >
 
-        <div data-role="header" style="background-color: #800080; color: #000; ">
-            <div style="background-color: #000; text-align: center;">
-                <ul>
-                    <h1 style="color: white;">Leslie Crochet</h1>
-                </ul>
-            </div>
-        </div>
 
         <div role="main" class="ui-content">
-            <h2 style="color: #800080;">Editar Los productos</h2>
+            <h2 style="color: #ff90ff;">Editar productos</h2>
             <div data-role="content">
-                <form action="/<%= crochet.code %>" method="post">
-                    <h4 style="color: #800080;">
-                        <%= clothe.team %>
-                    </h4>
-                    <input type="text" name="urlImg" placeholder="URL de la imagen" value="<%= clothe.urlImg %>">
-                    <input type="text" name="barcode" placeholder="Código de barras" value="<%= crochet.barcode %>">
+                <form action="/update/<%= crochet.barcode %>" method="post">
                     <input type="text" name="description" placeholder="Descripcion" value="<%= crochet.description %>">
                     <input type="number" name="price" placeholder="Precio de compra" value="<%= crochet.price %>">
                     <input type="text" name="color" placeholder="Color" value="<%= crochet.color %>">
-                    <input type="date" name="delieverDate" placeholder="Fecha de entrega" value="<%= crochet.delieverDate %>">
+                    <input type="date" name="deliverDate" placeholder="Fecha de entrega" value="<%= crochet.delieverDate %>">
                     <label for="flip-2" style="color: #800080;">Activo:</label>
                     <select name="status" id="flip-2" data-role="slider">
-                        <option value="0" <%= clothe.status === 0 ? "selected" : "" %>>No</option>
-                        <option value="1" <%= clothe.status === 1 ? "selected" : "" %>>Sí</option>
+                        <option value="0" <%= crochet.status === 0 ? "selected" : "" %>>No</option>
+                        <option value="1" <%= crochet.status === 1 ? "selected" : "" %>>Sí</option>
                     </select>
                     <button type="submit" id="submit-6" class="ui-shadow ui-btn ui-corner-all ui-mini" style="background-color: #800080; color: #FFF;">Actualizar</button>
                     <li>
@@ -48,10 +36,6 @@
                     </li>
                 </form>
             </div>
-        </div>
-
-        <div data-role="footer" style="text-align: center;color: black; background-color: #800080;">
-            <h5>Developed by Leslie Aparicio</h5>
         </div>
 
     </div>
