--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,83 +9,148 @@
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="/src/public/css/style.css">
-    
 </head>
 
 <body>
 
-    <!-- Inicio de la primera página -->
-    <div data-role="page" data-theme="b">
+    <!-- Contenido de la primera página -->
+    <div data-role="page" id="registros">
 
-        <div data-role="header" style="background-color: #800080; color: #000; ">
-            <div style="background-color: #000; text-align: center;">
+        <div role="main" class="ui-content">
+            <h4 style="text-align: center; color: #800080;">"Todo lo que imaginas, lo puedes tejer"</h4>
+        </div>
+
+        <div style="color: #800080;">
+            <h2>Inserta nuevos productos:</h2>
+        </div>
+
+        <form action="/" method="post">
+            <input type="text" name="barcode" placeholder="Código de barras">
+            <input type="text" name="description" placeholder="Descripcion">
+            <input type="number" name="price" placeholder="Precio">
+            <input type="text" name="color" placeholder="Color">
+            <input type="date" name="deliverDate" placeholder="Fecha de entrega">
+            <label for="flip-2" style="color: #800080;">Activo:</label>
+            <select name="status" id="flip-2" data-role="slider">
+                <option value="0">No</option>
+                <option value="1">Sí</option>
+            </select>
+            <button type="submit" id="submit-6" class="ui-shadow ui-btn ui-corner-all ui-mini" style="background-color: #800080; color: #FFF;">Guardar</button>
+            <div role="main" class="ui-content">
+                <div data-role="header" style="color: black; margin-top: 35px; background-color: #ff90ff;">
+                    <div style=" text-align: center;">
+                        <ul>
+                            <h2 style="color: black;">Revisa y conoce los productos más pedidos y solicitados</h2>
+                            <p><a href="../#pedidos">Productos vendidos</a></p>
+    
+                        </ul>
+                    </div>
+                </div>
+            
+            </div><!-- /content -->
+        </form>
+        
+
+    </div>
+
+    <!-- Contenido de la segunda página -->
+    <div data-role="page" id="pedidos">
+
+        <div data-role="header" style="color: white; margin-top: 35px; background-color: #ff90ff;">
+            <div style=" text-align: center;">
                 <ul>
-                    <h1 style="color: white;">Leslie Crochet</h1>
+                    <h2 style="color: black;">Nuestros Productos</h2>
                 </ul>
             </div>
         </div>
 
-
         <div role="main" class="ui-content">
-            <h4 style="text-align: center; color: #800080;">"Todo lo que imaginas lo puedes tener"</h4>
-            <div id="logo-container" style="text-align: center; margin-top: 20px;">
-            <img src="../public/img/img1.png" alt="">
-            </div>
-                    
-            <div style="color: #800080;"><h2>Inserta nuevos productos:</h2></div>
-            <form action="/" method="post">
-                <input type="text" name="urlImg" placeholder="URL de la imagen">
-                <input type="text" name="barcode" placeholder="Código de barras">
-                <input type="text" name="description" placeholder="Descripcion">
-                <input type="number" name="price" placeholder="Precio">
-                <input type="text" name="color" placeholder="Color">
-                <input type="date" name="deliverDate" placeholder="Fecha de entrega">
-                <label for="flip-2" style="color: #800080;">Activo:</label>
-                <select name="status" id="flip-2" data-role="slider">
-                    <option value="0">No</option>
-                    <option value="1">Sí</option>
-                </select>
-                <button type="submit" id="submit-6" class="ui-shadow ui-btn ui-corner-all ui-mini" style="background-color: #800080; color: #FFF;">Guardar</button>
-            </form>
-            </div>
 
-
-            <div data-role="header" style="color: #000; margin-top: 35px; background-color: #800080; " >
-                <h1>NefSports®</h1>
-                <div style="background-color: #000; text-align: center;">
+            <!-- Sección de productos de la segunda página -->
+            <div class="product-row" style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+                <% crochet.forEach((crochet) => { %>
+                <div class="product-item" style="width: 100%; margin-bottom: 40px; background-color: #fb7ffb; color: black; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); text-align: center;">
+                    <!-- Contenido específico de cada producto en la segunda página -->
+                    <div style="padding: 20px;">
+                        <h3 style="font-weight: bold; margin-bottom: 10px;">Producto</h3>
+                        <hr style="border-color: #800080; margin-bottom: 20px;">
+                        <p><strong>Codigo de barras:</strong> <%= crochet.barcode %></p>
+                        <p><strong>Descripcion:</strong> <%= crochet.description %></p>
+                        <p><strong>Precio:</strong> $<%= crochet.price.toFixed(2) %></p>
+                        <p><strong>Color:</strong> <%= crochet.color %></p>
+                        <p><strong>Fecha de entrega:</strong> <%= crochet.deliverDate %></p>
+                        <p><strong>Activo:</strong> <%= crochet.status === 1 ? 'Sí' : 'No' %></p>
+                        <hr style="border-color: #800080; margin-top: 20px;">
+                        <div style="display: flex; justify-content: center;">
+                            <button style="font-size: 12px; border-radius: 5px; padding: 8px 15px; margin-right: 10px; background-color: #800080; color: #FFF;" onclick="window.location.href='/delete/<%= crochet.barcode %>'">Eliminar</button>
+                            <button style="font-size: 12px; border-radius: 5px; padding: 8px 15px; background-color: #800080; color: #FFF;" onclick="window.location.href='/update/<%= crochet.barcode %>'">Editar</button>
+                        </div>
+                    </div>
+                </div>
+                <% }); %>
+            </div>
+            <div data-role="footer" style="color: black; margin-top: 35px; background-color: #ff90ff;">
+                <div style=" text-align: center;">
                     <ul>
-                        <h2 style="color: white;">Nuestros Productos</h2>
+                        <h2 style="color: black;">Pasos para realizar un pedido</h2>
+                        <p><a href="/">Regresar</a> | <a href="#informacion" data-ajax="false">Revisar</a></p></p>
+
                     </ul>
                 </div>
             </div>
-
-        <div role="main" class="ui-content">
-
-            <div class="product-row" style="display: flex; flex-wrap: wrap; justify-content: space-between;">
-                <% crochet.forEach((crochet) => { %>
-                    <div class="product-item" style="width:45%; margin-bottom: 20px; font-size: 11px; border-radius: 15px; background-color: #800080; color: #000; text-align: center; position: relative;">
-                        <img style="width: 100px; border-radius: 5px; height: 85px; margin-bottom: 10px;" src="<%= crochet.urlImg %>" alt="<%= crochet.description %>">
-                        <p style="line-height: 1;">Descripcion: <%= crochet.description %></p>
-                        <p style="line-height: 1;">Precio: $<%= crochet.price.toFixed(2) %></p>
-                        <p style="line-height: 1;">Color: <%= crochet.color %></p>
-                        <p style="line-height: 1;">Fecha de entrega: <%= crochet.deliverDate %></p>
-                        <p style="line-height: 1;">Activo: <%= crochet.status === 1 ? 'Sí' : 'No' %></p>
-                        <div style="display: flex; justify-content: center;">
-                            <button style="font-size: 7px; border-radius: 10px; padding: 5px 10px; margin-right: 5px; background-color: #800080; color: #FFF;" onclick="window.location.href='/De/<%= crochet.code%>'">Eliminar</button>
-                            <button style="font-size: 7px; border-radius: 10px; padding: 5px 10px; background-color: #800080; color: #FFF;" onclick="window.location.href='/<%= crochet.code%>'">Editar</button>
-                        </div>
-                        
-                    </div>
-                <% }); %>
-            </div>
-            
-
         </div>
-        <div data-role="footer" style="text-align: center;color: black; background-color: #800080;">
-            <h5>Developed by Leslie Aparicio</h5>
-        
-        </div>      
-            </div>
     </div>
+
+    <div data-role="page" id="informacion">
+    
+    <div role="main" class="ui-content">
+        <div data-role="header" style="color: white; margin-top: 35px; background-color: #ff90ff;">
+            <div style="text-align: center;">
+                <h2 style="color: black;">Guía de pedidos</h2>
+            </div>
+        </div>
+        <div style="padding: 20px;">
+            <ol style="list-style-type: none; padding-left: 0;">
+                <li style="margin-bottom: 10px;">
+                    <span style="font-weight: bold;">1. Contactanos al número 746 109 8285</span>
+                </li>
+                <li style="margin-bottom: 10px;">
+                    <span style="font-weight: bold;">2. Cuéntanos sobre tus gustos.</span>
+                </li>
+                <li style="margin-bottom: 10px;">
+                    <span style="font-weight: bold;">3. Si ya tienes una idea, envíanos la foto y nosotros lo cotizamos.</span>
+                </li>
+                <li style="margin-bottom: 10px;">
+                    <span style="font-weight: bold;">4. Si aún no sabes qué adquirir, solicita el catálogo de productos.</span>
+                </li>
+                <li style="margin-bottom: 10px;">
+                    <span style="font-weight: bold;">5. Realiza tu cotización y confirma si se llevará a cabo el pedido.</span>
+                </li>
+                <li style="margin-bottom: 10px;">
+                    <span style="font-weight: bold;">6. Establece fecha y lugar de entrega.</span>
+                </li>
+                <li style="margin-bottom: 10px;">
+                    <span style="font-weight: bold;">7. Realiza el pago de tu pedido (Efectivo, transferencia).</span>
+                </li>
+                <li style="margin-bottom: 10px;">
+                    <span style="font-weight: bold;">8. Confirmamos y verificamos de nuevo el precio, colores, tamaño, fecha y hora de entrega.</span>
+                </li>
+                <li>
+                    <span style="font-weight: bold;">9. Listo, solo espera un mensajito de confirmación de la entrega 2 días antes.</span>
+                </li>
+            </ol>
+        </div>
+        <div data-role="header" style="color: white; margin-top: 35px; background-color: #ff90ff;">
+            <div style="text-align: center;">
+                <h2 style="color: black;">¿Estás listo para realizar un pedido?</h2>
+                <p><a href="#registros">Realizar un pedido</a></p>
+            </div>
+        </div>
+    </div><!-- /content -->
+
+</div>
+
+
 </body>
+
 </html>
