--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -25,6 +25,7 @@
         </div>
 
         <form action="/" method="post">
+            <input type="text" name="urlImg" placeholder="URL de la imagen">
             <input type="text" name="barcode" placeholder="Código de barras">
             <input type="text" name="description" placeholder="Descripcion">
             <input type="number" name="price" placeholder="Precio">
@@ -74,6 +75,7 @@
                     <div style="padding: 20px;">
                         <h3 style="font-weight: bold; margin-bottom: 10px;">Producto</h3>
                         <hr style="border-color: #800080; margin-bottom: 20px;">
+                        <img style="width: 100px; border-radius: 5px; height: 85px; margin-bottom: 10px;" src="<%= crochet.urlImg %>" alt="<%= crochet.description %>">
                         <p><strong>Codigo de barras:</strong> <%= crochet.barcode %></p>
                         <p><strong>Descripcion:</strong> <%= crochet.description %></p>
                         <p><strong>Precio:</strong> $<%= crochet.price.toFixed(2) %></p>
